# system-manager

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  install.nix
src/: args.rs  command_builder.rs  lib.rs  main.rs  test.rs
src/options/: mod.rs  parsed.rs
