[package]
name = "system-manager"
version = "1.5.0"
edition = "2024"
description = "Manages the nixos configuration for the system & home-manager."

[dependencies]
app_dirs2 = "2.5.5"
camino = { version = "1.1.10", features = ["serde1"] }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.48"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
